- add constants - fix collect(Collectors.toList()) -> toList(); - add finalReport file